Skip to content

libvlc memory leak on linux

Our libvlc implementation app has to play more than 600 videos per day. So far our implementation was based on libvlc windows and android ports. And we have no issues, application is stable and memory usage is stable during all day,

recently we ported our c++ code to Linux, and we can observe memory leak. Not all memory is cleaned after proper releasing libvlc_media_player and libvlc_instance,

firstly we thought is our fault and maybe our code is not releasing memory, but we checked our code with valgrind and everything is fine, w decided to test vlc app which is based on libvlc. We added 2 short movies (10second each) to media playlist and we run test in vlc with 2 videos played in loop.

And we see exactly the same memory leak directly in vlc. After 10 hours memory growth from 200MB to 500MB on i386 arch, and on amd64 memory growth from 300MB to over 1.2G and vlc chrashed.

So repro path is very simple, just add two short movies to playlist, loop playlist in vlc and just observe how memory is growing, What is strange, windows port doesn't have this issue,

let me know if i can help, and if i can provide any additional informations,

we runned that test on UBuntu 16.04 i386 and amd64 and XUbuntu as weel, we tested vlc 2.2.2 and 2.2.4 all has the same issue

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information